# CustomAppVMP

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/appvmp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/dalvik/: AccessCheck.cpp  AccessCheck.h  Alloc.cpp  Alloc.h  AllocTracker.cpp  AllocTracker.h  Allocc.cpp  Allocc.h  Array.cpp  Array.h  Atomic.cpp  Atomic.h  AtomicCache.cpp  AtomicCache.h  BitConvert.cpp  BitConvert.h  BitVector.cpp  BitVector.h  CardTable.cpp  CardTable.h  Class.cpp  Class.h  CodeVerify.cpp  CodeVerify.h  Common.h  Dalvik.h  DalvikVersion.h  DdmHeap.cpp  Debugger.cpp  Debugger.h  DexCatch.h  DexClass.h  DexDebugInfo.cpp  DexDebugInfo.h  DexFile.h  DexInlines.cpp  DexOpcodes.cpp  DexOpcodes.h  DexOptData.cpp  DexOptData.h  (+172 more)
app/src/main/cpp/dalvik/vm/: Alloc.cpp  Alloc.h  AllocTracker.cpp  AllocTracker.h  Annotation.h  Array.h  AtomicCache.cpp  AtomicCache.h  BitVector.h  CardTable.h  Class.cpp  Class.h  CodeVerify.h  Common.h  Dalvik.h  Debugger.h  DexCatch.h  DexDebugInfo.cpp  DexDebugInfo.h  DexFile.cpp  DexFile.h  DexPrepare.h  DexProto.cpp  DexProto.h  DexUtf.h  DexVerify.cpp  DexVerify.h  DvmDex.h  Exception.cpp  Exception.h  Globals.h  Hash.h  Heap.cpp  Heap.h  HeapInternal.h  HeapSource.cpp  HeapSource.h  IndirectRefTable.h  Inlines.h  InstrUtils.h  (+39 more)
app/src/main/java/com/appvmp/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/appvmp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
